# rhino-mass-quote

./: .gitignore  README.md  pyproject.toml
docs/: candidate-price-master-design.md  data-security.md  development-log.md  final-architecture.md  git-release-log.md  mapping-ui-guide.md  pricing-method.md  real-project-test-procedure.md  release-checklist.md  rhino-command-registration.md  rhino-command-usage.md  rhino-export-script-guide.md  rhino-internal-ui-guide.md  rhino-layer-estimator-design.md  rhino-manual-test-checklist.md  rhino-manual-test-result-template.md  rhino-manual-test-result.md  rhino-quickstart.md  rhino-test-procedure.md  rhino-workflow.md  security-and-public-data.md  steel-estimator-design.md  tax-handling.md
public_reference_data/: public_plate_reference_prices.csv  public_reference_price_notes.md  public_shape_reference_prices.csv
rhino_scripts/: create_demo_rhino_model.py  export_rhino_objects.py  mass_core_for_rhino.py  mass_rhino.py  quote_estimate_rhino.py  steel_estimate_core_for_rhino.py  steel_estimate_rhino_panel.py  weight_cost_estimate_rhino.py
samples/: cost_items.csv  estimate_result.csv  estimate_summary.csv  layer_mapping.csv  layer_mapping_guide.md  layer_summary.csv  rhino_objects.csv  rhino_objects_demo.csv  rhino_objects_from_export_sample.csv  rhino_panel_demo_result.csv
tests/: test_audit_rhino_geometry.py  test_candidate_prices.py  test_cost_items.py  test_enrich.py  test_layer_estimate.py  test_layer_mapping.py  test_layer_summary.py  test_mapping_ui.py  test_mass_and_quote.py  test_material_parser.py  test_tax.py  (+14 more)
(+31 files in other folders)
