[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "steel-estimator"
version = "0.1.0"
description = "鋼材見積PDF解析・概算見積ツール（ローカル完結）"
requires-python = ">=3.9"
dependencies = [
    "pdfplumber>=0.11",
    "pypdf>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27"]
ocr = ["pytesseract", "pdf2image"]
ui = ["fastapi>=0.110", "uvicorn>=0.27", "jinja2>=3.1", "python-multipart>=0.0.9"]

[project.scripts]
steel-estimator = "steel_estimator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
steel_estimator = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
